--- a/css/estilos.css
+++ b/css/estilos.css
@@ -371,10 +371,11 @@ body {
     align-self: flex-end;
     margin-left: 10px;
     transition:  transform .3s;
+    transform: rotate(180deg);
 }
 
 .questions__arrow--rotate{
-    transform: rotate(180deg);
+    transform: rotate(0deg);
 }
 
 .questions__show{
@@ -468,6 +469,12 @@ body {
     --padding-container: 30px 0;
     text-align: center;
     color: #fff;
+}
+
+.footer__social {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
 }
 
 .footer__copyright{
